fixed text gaps

--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 /* Font style */
-body{
+body {
     font-family: 'Lato', sans-serif;
 }
-*{
+
+* {
     margin: 0px;
 }
+
 /* header style */
 .head-content {
     display: flex;
@@ -30,11 +32,8 @@ body{
 
 .header-text {
     color: #272727;
-    font-family: Lato;
     font-size: 80px;
-    font-style: normal;
     font-weight: 800;
-    line-height: normal;
     justify-content: space-around;
 
 }
@@ -47,7 +46,7 @@ body{
     font-style: normal;
     font-weight: 400;
     line-height: 30px;
-    padding-bottom: 20px;
+    padding: 30px 0px 50px 0px;
 }
 
 
@@ -158,7 +157,7 @@ body{
 /* Hot deals style */
 .deal {
     display: flex;
-    justify-content:space-around;
+    justify-content: space-around;
     border-radius: 8px;
     background: rgba(229, 84, 115, 0.05);
     width: 100%;
@@ -181,6 +180,11 @@ body{
 .deal-text {
     width: 600px;
     padding-bottom: 20px;
+    padding: 50px 0px 80px 0px;
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
 }
 
 .color-text {
@@ -284,13 +288,14 @@ footer {
     font-weight: 400;
     padding-top: 70px;
 }
-.copyright{
+
+.copyright {
     color: rgba(255, 255, 255, 0.40);
-text-align: center;
-font-family: Lato;
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-padding-top: 40px;
+    text-align: center;
+    font-family: Lato;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding-top: 40px;
 }
